# obsidian-tasks-cli

./: .gitignore  README.md  pyproject.toml
src/obsidian_tasks/: cli.py  env.py  tasks.py
tests/: test_tasks.py
